Implementacion reportes
