# src/main/java/com/nttdata/transaction/model/Dto/ReportAvailableBalanceDTO.java
@@ -1,0 +1,19 @@
+package com.nttdata.transaction.model.Dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.math.BigDecimal;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class ReportAvailableBalanceDTO {
+
+    private String productId;
+
+    private BigDecimal availableBalance;
+
+    private String productCategory;
+}
